# foxholed

./: README.md  pyproject.toml
.claude/commands/: explore-angles.md
src/foxholed/: __main__.py  capture.py  config.py  detection_worker.py  detector.py  main.py  map_data.py  region_notifier.py  settings.py  war_api.py  window_utils.py
src/foxholed/ui/: map_widget.py  map_window.py  overlay_widget.py  region_view_widget.py  template_dialog.py
tests/: test_detector.py  test_region_notifier.py  test_region_view.py  test_settings.py  test_war_api.py
